--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -7,49 +7,37 @@ main{
 }
 
 /* ---CARD--- */
-/* .movie-card {
+/* .card {
   position: relative;
-  width: 200px;
-  height: 300px;
   overflow: hidden;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  background-color: #000;
 }
 
-.movie-card:hover {
-  transform: scale(1.05);
-}
-
-.movie-image {
+.card-img-top {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: opacity 0.3s ease;
+  display: block;
 }
 
-.movie-info {
+.card-body {
   position: absolute;
   top: 0;
   left: 0;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.75);
   width: 100%;
   height: 100%;
-  color: white;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
+  padding: 1rem;
   transition: opacity 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
+  overflow-y: auto; 
 }
 
-.movie-card:hover .movie-image {
+.card:hover .card-img-top {
   opacity: 0;
 }
 
-.movie-card:hover .movie-info {
+.card:hover .card-body {
   opacity: 1;
 } */
